Bug 121318 - [CSS Regions] Strange layout for content with region breaks
Summary: [CSS Regions] Strange layout for content with region breaks
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andrei Bucur
URL:
Keywords: AdobeTracked
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2013-09-13 13:22 PDT by Mihnea Ovidenie
Modified: 2014-03-18 23:58 PDT (History)
9 users (show)

See Also:


Attachments
Test (2.79 KB, text/html)
2013-09-13 13:22 PDT, Mihnea Ovidenie
no flags Details
Patch (12.64 KB, patch)
2014-03-12 10:48 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff
Patch (11.01 KB, patch)
2014-03-18 10:31 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mihnea Ovidenie 2013-09-13 13:22:51 PDT
Created attachment 211581 [details]
Test

In the attached test case, if one slowly resizes the browser window, the green background element is laid out and split continuosly between the 4 regions.
Comment 1 Andrei Bucur 2014-03-12 10:48:02 PDT
Created attachment 226529 [details]
Patch
Comment 2 Mihnea Ovidenie 2014-03-15 02:30:44 PDT
Wouldn't be better to use checkLayout.js and give up the reference test? Looks like you are testing that the second and the third region have zero height.
Comment 3 Andrei Bucur 2014-03-18 10:31:19 PDT
Created attachment 227070 [details]
Patch
Comment 4 Mihnea Ovidenie 2014-03-18 10:53:59 PDT
Comment on attachment 227070 [details]
Patch

r=me
Comment 5 WebKit Commit Bot 2014-03-18 23:57:45 PDT
Comment on attachment 227070 [details]
Patch

Clearing flags on attachment: 227070

Committed r165873: <http://trac.webkit.org/changeset/165873>
Comment 6 WebKit Commit Bot 2014-03-18 23:58:49 PDT
All reviewed patches have been landed.  Closing bug.